--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "~3.3.6",
     "bootstrap-social": "^5.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
-    "gulp": "~3.9.1",
+    "gulp": "^3.9.1",
     "gulp-connect": "~3.2.1",
     "gulp-sass": "~2.2.0",
     "i18next": "~2.4.0",
