--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-social": "^5.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
+    "geocomplete": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-connect": "~3.2.1",
     "gulp-sass": "~2.2.0",
@@ -27,7 +28,6 @@
     "moment": "^2.15.1",
     "ng-i18next": "~0.5.2",
     "protractor": "~3.2.2",
-    "restangular": "~1.5.2",
-    "vsGoogleAutocomplete": "^0.5.0"
+    "restangular": "~1.5.2"
   }
 }
