Lightbox, detail rework

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "geocomplete": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-connect": "~3.2.1",
-    "gulp-sass": "~2.2.0",
     "i18next": "~2.4.0",
     "i18next-client": "~1.11.4",
     "jquery": "~2.2.2",
     "jquery-countdown": "^2.2.0",
     "jquery-simple-timer": "0.0.5",
+    "lightbox2": "^2.10.0",
     "lodash": "~4.6.1",
     "moment": "^2.15.1",
     "ng-dialog": "^1.4.0",
