--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "bootstrap-social": "^5.0.0",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "geocomplete": "^1.7.0",
+    "google-closure-compiler": "^20181210.0.0",
     "gulp": "^3.9.1",
     "gulp-connect": "~3.2.1",
     "i18next": "~2.4.0",
     "i18next-client": "~1.11.4",
+    "jq-accordion": "~1.0.3",
     "jquery": "~2.2.2",
     "jquery-countdown": "^2.2.0",
     "jquery-simple-timer": "0.0.5",
-    "jq-accordion": "~1.0.3",
     "lightbox2": "^2.10.0",
     "lodash": "~4.6.1",
     "moment": "^2.15.1",
