--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "~3.3.6",
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-social": "^5.0.0",
+    "bootstrap-toggle": "^2.2.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "geocomplete": "^1.7.0",
     "google-closure-compiler": "^20181210.0.0",
