--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-social": "^5.0.0",
     "bootstrap-toggle": "^2.2.2",
+    "chart.js": "^2.7.3",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "geocomplete": "^1.7.0",
     "google-closure-compiler": "^20181210.0.0",
