--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "license": "BSD",
   "dependencies": {
     "angular": "~1.7.5",
-    "angular-bootstrap": "^0.12.2",
     "angular-sanitize": "^1.7.5",
     "angular-ui-router": "~1.0.20",
+    "angularjs-tooltips": "^1.0.5",
     "bootstrap": "~3.3.6",
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-social": "^5.0.0",
