--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-datepicker": "^1.8.0",
     "bootstrap-social": "^5.0.0",
     "bootstrap-toggle": "^2.2.2",
+    "bootstrap-slider": "^10.6.1",
     "chart.js": "^2.7.3",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "geocomplete": "^1.7.0",
