- udpate npm - zmena lok. hlášek

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "angularjs-tooltips": "^1.0.5",
     "bootstrap": "~3.3.6",
     "bootstrap-datepicker": "^1.8.0",
+    "bootstrap-slider": "^10.6.1",
     "bootstrap-social": "^5.0.0",
     "bootstrap-toggle": "^2.2.2",
-    "bootstrap-slider": "^10.6.1",
     "chart.js": "^2.7.3",
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "geocomplete": "^1.7.0",
@@ -37,6 +37,7 @@
     "lightbox2": "^2.10.0",
     "lodash": "~4.6.1",
     "moment": "^2.15.1",
+    "natives": "^1.1.6",
     "ng-dialog": "^1.4.0",
     "ng-i18next": "~0.5.2",
     "protractor": "~3.2.2",
