--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Martin Meravý",
   "license": "BSD",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "angular": "~1.7.5",
     "angular-sanitize": "^1.7.5",
     "angular-ui-router": "~1.0.20",
@@ -35,7 +36,7 @@
     "jquery-countdown": "^2.2.0",
     "jquery-simple-timer": "0.0.5",
     "lightbox2": "^2.10.0",
-    "lodash": "~4.6.1",
+    "lodash": "^4.17.11",
     "moment": "^2.15.1",
     "natives": "^1.1.6",
     "ng-dialog": "^1.4.0",
